Resources/public/css/hallo.css
/* Editable elements */
[contenteditable]{
    position: relative;
    outline: none;
    padding: 5px 5px 0;
    border-left: 1px dotted #fff;
    border-right: 1px dotted #fff;
}

[contenteditable]:hover{
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    cursor: pointer;
}

[contenteditable] img:hover, [contenteditable] img:active{
    cursor: move;
}

[contenteditable].inEditMode{
    cursor: text;
    border-left: 3px solid #000;
    border-right: 3px solid #000;
    border-bottom: 3px solid #000;
    padding: 20px 10px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}

#content [contenteditable] a{
    color: #00add2;
}

/* Edit Button */
.editButton{
    outline: none;
    position: absolute;
    top: 10px;
    right: 0;
    padding: 3px 25px 2px 10px;
    color: #fff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.6;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.8) url(/bundles/liipvie/img/editIcon.png) no-repeat 36px 3px;
}

.inEditMode .editButton{
    display: none;
}
/* End Edit Button */

#savebutton{
    background: #222;
    display: none;
    padding: 5px 10px 6px;
    color: #fff;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    position: relative;
    cursor: pointer;
    margin: 15px 0 0;
}

#savebutton:hover{
    background-color: #111;
    color: #fff;
}

/* Toolbar */
.halloToolbar{
    width: 800px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    z-index: 100;
}

/* jQueryUI OVERRIDES */
.halloToolbar .ui-state-default{ border: none; }

.halloToolbar .ui-button{
    margin: 0 0 0 1px;
    color: #fff;
    box-shadow: none;
    height: 33px;
    width: 26px;
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
}

.halloToolbar .ui-button-text-only .ui-button-text{
    padding: 0;
    margin: 0;
}

.halloToolbar .ui-button-text .ui-button-text{
    display: block;
    height: 22px;
    width: 17px;
    margin: 0;
    padding: 0;
    text-indent: 1000px;
    overflow: hidden;
}

.halloToolbar .ui-buttonset{
    display: inline-block;
    margin: 0;
}

/**********************************/
/* Special styling of button rows */
/**********************************/
.halloToolbar .halloButtonrow { background-color: #000000; }

.halloToolbar .halloButtonrow-1 {
    background-color: #272727;
    text-align: right;
    width: auto;
    margin-left: 890px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: 0px 5px;
}

.halloToolbar .halloButtonrow-2 {
    border-top-left-radius: 5px;
}

.halloToolbar .halloButtonrow-2 .ui-buttonset {
    background: url(/bundles/liipvie/img/stripe.png) no-repeat right 5px;
    padding: 0 6px 0 5px;
}




.halloToolbar .ui-buttonset:last-child{
    border-right: 0;
}

.editButton{
    outline: none;
    position: absolute;
    top: 10px;
    right: 0;
    padding: 3px 25px 2px 10px;
    color: #fff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.6;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.8) url(/bundles/liipvie/img/editIcon.png) no-repeat 36px 3px;
}

.halloToolbar .ui-buttonset:last-child{ background: none; }
/* END jQueryUI OVERRIDES */

/**********************/
/* Buttons in Toolbar */
/**********************/
.ui-buttonset .ui-button.ui-state-active{ background: none; }

/* Format */
.halloToolbar .ui-buttonset .bold_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -144px -34px; }
.halloToolbar .ui-buttonset .bold_button.ui-state-active{ background-position: -144px -2px; }

.halloToolbar .ui-buttonset .italic_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -171px -34px; }
.halloToolbar .ui-buttonset .italic_button.ui-state-active{ background-position: -171px -2px; }

.halloToolbar .ui-buttonset .underline_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -199px -34px; }
.halloToolbar .ui-buttonset .underline_button.ui-state-active{ background-position: -199px -2px; }

/* Lists */
.halloToolbar .ui-buttonset .Unordered_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -254px -34px; }
.halloToolbar .ui-buttonset .Unordered_button.ui-state-active{ background-position: -254px -2px; }

/* Justify */
.halloToolbar .ui-buttonset .Left_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -298px -34px; }
.halloToolbar .ui-buttonset .Left_button.ui-state-active{ background-position: -298px -2px; }

.halloToolbar .ui-buttonset .Center_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -327px -34px; }
.halloToolbar .ui-buttonset .Center_button.ui-state-active{ background-position: -327px -2px; }

.halloToolbar .ui-buttonset .Right_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -357px -34px; }
.halloToolbar .ui-buttonset .Right_button.ui-state-active{ background-position: -357px -2px; }

/* Paragraph & Heading */
.halloToolbar .ui-buttonset .p_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -4px -34px; }
.halloToolbar .ui-buttonset .p_button.ui-state-active{ background-position: -4px -2px; }

.halloToolbar .ui-buttonset .h1_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -31px -34px; }
.halloToolbar .ui-buttonset .h1_button.ui-state-active{ background-position: -31px -2px; }

.halloToolbar .ui-buttonset .h2_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -58px -34px; }
.halloToolbar .ui-buttonset .h2_button.ui-state-active{ background-position: -58px -2px; }

.halloToolbar .ui-buttonset .h3_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -85px -34px; }
.halloToolbar .ui-buttonset .h3_button.ui-state-active{ background-position: -85px -2px; }

/* Anchor */
.halloToolbar .ui-buttonset .anchor_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -91px -34px; }
.halloToolbar .ui-buttonset .anchor_button.ui-state-active{ background-position: -91px -2px; }

/* Image */
.halloToolbar .ui-buttonset .image_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -13px -34px; }
.halloToolbar .ui-buttonset .image_button.ui-state-active{ background-position: -13px -2px; }


/* END Buttons */

/****************/
/* Image Dialog */
/****************/
.ui-dialog {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    border: 3px solid black;
}

.ui-dialog .ui-dialog-content { padding: 0; }

/* Title bar */

.ui-dialog-titlebar {
    background: #000000;
    color: white;
}

.ui-dialog .ui-dialog-titlebar-close {
    background-color: red;
}

/* Nav/Tabs */
.ui-dialog .halloimage-tabs {
    text-transform: uppercase;
    font-size: 10px;
    color: white;
    height: 30px;
    background-color: #01add2;
    text-align: center;
    line-height: 30px;
    padding-top: 3px;
}

.ui-dialog .halloimage-tabs li {
    display: inline-block;
    padding: 0 5px;
    cursor: pointer;
}

.halloimage-tab-search, .halloimage-tab-upload {
    display: none;
}

.ui-dialog .halloimage-tab-activeIndicator {
    vertical-align: top;
    margin-left: 50px;
}

/* Content */
.halloimage-dialogcontent {
    text-align: center;
    padding: 15px;
}

.halloimage-activeimage {
    -moz-transform: rotate(-3deg);
    -webkit-transform: rotate(-3deg);
    padding: 3px;
    box-shadow: 4px 4px 7px #888;
    cursor: move;
}

.halloimage-activeimage:hover {
    position: relative;
    left: -20px;
    -moz-transform: rotate(-6deg);
    -webkit-transform: rotate(-6deg);
}

/**************************************/
/* This is used by the overlay plugin */
/**************************************/
.halloOverlay {
    background-color: #000000;
    opacity: 0.5;
}

